syntax = "proto3";

service MoeShard {
  rpc Execute (Inputs) returns (Outputs) {}
}

message Inputs {
  bytes data = 1;
  bytes jobs = 2;
}

message Outputs {
  bytes data = 1;
  bytes arr_map = 2;
}
